assets/kubernetes/metabase/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ${deployment_name}
  namespace: ${namespace}
spec:
  replicas: 1
  selector:
    matchLabels:
      app: metabase
  template:
    metadata:
      labels:
        app: metabase
    spec:
      nodeSelector:
         agentpool: application
      containers:
        - name: ${container_name}
          image: metabase/metabase:latest
          ports:
            - containerPort: 3000
          resources:
            limits:
              cpu: 500m
              memory: 1Gi
