assets/kubernetes/metabase/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ${ingress_name}
  namespace: ${namespace}
  annotations:
    kubernetes.io/ingress.class: azure/application-gateway
    appgw.ingress.kubernetes.io/ssl-redirect: "true"
    appgw.ingress.kubernetes.io/request-timeout: "60"
spec:
  tls: 
  - secretName: ${tls_secret_name}
  rules:
  - host: ${host}
    http:
      paths:
      - path: /
        pathType: Exact
        backend:
          service:
            name: ${service_name}
            port:
              number: 80
